--- a/components/_SingleInstance/TheHeaderBar/TheHeaderBar.scss
+++ b/components/_SingleInstance/TheHeaderBar/TheHeaderBar.scss
@@ -6,22 +6,46 @@ $c-the-headerbar-shadow-size: 5px;
 
 .#{$c} {
   display: flex;
-  align-items: center;
-  padding: px-to-rem($s-size-gutter-small);
-  box-shadow: 0 $c-the-headerbar-shadow-size $c-the-headerbar-shadow-size $c-the-headerbar-shadow-color;
+  padding: $s-size-gutter-small $s-size-gutter-small * 2;
+  z-index: z('menu');
+  position: fixed;
+  top: 0;
+  width: 100%;
+  transition: background-color $s-animation-duration-default, top $s-animation-duration-default, padding $s-animation-duration-default;
 
-  @include mq($from: medium) {
-    padding: px-to-rem($s-size-gutter-medium);
+  .#{$c}__logo {
+    &.#{$c}__Logo {
+      position: relative;
+      top: 0.7rem;
+
+      @include mq($from: medium) {
+        top: 1.1rem;
+      }
+    }
   }
 
   &__item {
     &:first-child {
-      flex: 0 1 10%;
+      flex: 0 1 100%;
+      z-index: 1; // lift it above nav (second item)
     }
 
-    &:last-child {
-      text-align: right;
-      flex: 0 1 90%;
+    &--nav {
+      position: absolute;
+      right: $s-size-gutter-small;
     }
+  }
+}
+
+/*
+ * IE Fixes
+ * Targets IE 11
+ */
+
+.flexbox.no-flexboxlegacy.flexboxtweener {
+  // sass-lint:disable-line force-element-nesting
+
+  .#{$c}__item {
+    padding-top: 2rem;
   }
 }
