--- a/components/_SingleInstance/TheNavigation/TheNavigation.scss
+++ b/components/_SingleInstance/TheNavigation/TheNavigation.scss
@@ -6,46 +6,62 @@ $c-the-navigation-spacer-default: 1em;
 .#{$c} {
   position: relative;
 
-  &__list {
-    @include mq($to: medium) {
-      @include px-and-rem('margin-top', $s-the-header-bar-height-small);
-      display: none;
-      justify-content: flex-start;
-      flex-direction: column;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: calc(100vh - #{px-to-rem($s-the-header-bar-height-small)});
-      background: $s-color-white;
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch; // sass-lint:disable-line no-vendor-prefixes
+  &__wrap {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    background: $s-color-white;
+    opacity: 0.7;
 
-      &.is-open {
-        display: flex;
-      }
+    &.is-open {
+      display: block;
     }
+  }
+
+  &__scroll-wrapper {
+    width: 100%;
+    max-height: calc(100% - #{$s-the-header-bar-height-small});
+    min-height: calc(100% - #{$s-the-header-bar-height-small});
+    margin-top: 6rem;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch; // sass-lint:disable-line no-vendor-prefixes
+    display: flex;
+    flex-direction: column;
+    padding: 0 $s-size-gutter-small $s-size-gutter-small;
+  }
+
+  &__main-nav-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__list {
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 100%;
+    padding-bottom: $s-size-spacer-small;
 
     @include mq($from: medium) {
-      display: flex;
-      justify-content: flex-end;
-      flex-direction: row;
+      padding-left: $s-size-spacer-small;
+      padding-bottom: 0;
+      margin-bottom: $s-size-spacer-small;
     }
   }
 
   &__item {
-    @include font-style-base;
-
-    @include mq($to: medium) {
-      width: 100%;
-      text-align: center;
-      margin-bottom: $c-the-navigation-spacer-default * 1.5;
-    }
+    width: 100%;
+    text-align: left;
+    margin-bottom: 0.3em;
 
     @include mq($from: medium) {
-      &:not(:last-child) {
-        margin-right: $c-the-navigation-spacer-default;
-      }
+      margin-bottom: 0.17em;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
     }
 
     &--has-children {
@@ -63,39 +79,16 @@ $c-the-navigation-spacer-default: 1em;
       display: block;
       margin-bottom: $c-the-navigation-spacer-default / 2;
       white-space: nowrap;
-
-      @include mq($from: medium) {
-        margin-bottom: $c-the-navigation-spacer-default;
-        background-color: $s-color-white;
-      }
     }
 
     a {
       @include hocus-focus($type: textcolor, $color: $s-color-primary);
+      text-decoration: none;
     }
   }
 
   &__sub-list {
     padding-top: $c-the-navigation-spacer-default;
-
-    @include mq($from: medium) {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      margin: 0;
-      visibility: hidden;
-    }
-  }
-
-  &__link {
-    /* Win some specificity battles caused by BBtn component */
-    &.is-active.is-active { // sass-lint:disable-line force-element-nesting
-      color: $s-color-primary;
-    }
-
-    &.#{$c}__BBtn.#{$c}__BBtn { // sass-lint:disable-line force-element-nesting
-      margin-bottom: 0;
-    }
   }
 
   &__lang-item {
@@ -105,6 +98,28 @@ $c-the-navigation-spacer-default: 1em;
       &::after {
         content: ' / ';
       }
+    }
+  }
+}
+
+
+/*
+ * IE Fixes
+ * Targets IE 11
+ */
+
+.flexbox.no-flexboxlegacy.flexboxtweener {
+  // sass-lint:disable-line force-element-nesting
+
+  .#{$c}__scroll-wrapper {
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .#{$c}__list {
+
+    @include mq($from: medium) {
+      padding-left: 0;
     }
   }
 }
