--- a/assets/css/_tools.grid.scss
+++ b/assets/css/_tools.grid.scss
@@ -1,5 +1,5 @@
-// @import '~susy/sass/susy';
-// @import '~susy/sass/plugins/svg-grid';
+@import '~susy/sass/susy';
+@import '~susy/sass/plugins/svg-grid';
 
 /**
  * Susy Settings
@@ -8,7 +8,10 @@
  * https://medium.com/oddbird-web/understanding-spread-in-susy3-228b2a36c444
  */
 
+$s-amount-columns: 12;
+
 $susy: (
   'columns': susy-repeat($s-amount-columns), // makes 12 fluid columns
   'gutters': 0.5, // unitless gutter as fraction, on the same scale as any unitless columns
 );
+
