[Update] Mixins: Fix scss issue when generating

--- a/assets/css/_tools.mixins.scss
+++ b/assets/css/_tools.mixins.scss
@@ -213,7 +213,7 @@
 
     @include mq($from: medium) {
       padding: 0 $s-size-gutter-medium;
-      max-width: calc($s-size-content-max-width-small + 2 * ($s-size-gutter-medium));
+      max-width: px-to-rem($s-size-content-max-width-small) + 2 * ($s-size-gutter-medium);
       margin-left: auto;
       margin-right: auto;
     }
@@ -223,7 +223,7 @@
 
     @include mq($from: medium) {
       padding: 0 $s-size-gutter-medium;
-      max-width: calc($s-size-content-max-width-medium + 2 * ($s-size-gutter-medium));
+      max-width: px-to-rem($s-size-content-max-width-medium) + 2 * ($s-size-gutter-medium);
       margin-left: auto;
       margin-right: auto;
     }
@@ -233,7 +233,7 @@
 
     @include mq($from: medium) {
       padding: 0 $s-size-gutter-medium;
-      max-width: calc($s-size-content-max-width-large + 2 * ($s-size-gutter-medium));
+      max-width: px-to-rem($s-size-content-max-width-large) + 2 * ($s-size-gutter-medium);
       margin-left: auto;
       margin-right: auto;
     }
