[Update] Add hocus-focus to navigation and make links unfocusable when menu closed. Add alternative page title

--- a/components/Logo/Logo.scss
+++ b/components/Logo/Logo.scss
@@ -11,6 +11,6 @@ $c-logo-height: 30px;
   }
 
   a {
-    @include hocus-focus($type: textcolor, $color: $s-color-primary);
+    @include hocus-focus($type: outline, $color: $s-color-primary);
   }
 }
