--- a/components/_Base/BRichtext/BRichtext.scss
+++ b/components/_Base/BRichtext/BRichtext.scss
@@ -2,5 +2,8 @@
 
 $c: 'BRichtext';
 
-// .#{$c} {
-// }
+.#{$c} {
+  a {
+    @include hocus-focus($type: outline, $color: $s-color-primary, $offset: 0.1rem);
+  }
+}
