--- a/components/Examples/PostsList/PostsList.scss
+++ b/components/Examples/PostsList/PostsList.scss
@@ -12,7 +12,7 @@ $c: 'PostsList';
     }
 
     a {
-      @include hocus-focus($type: textcolor, $color: $s-color-primary);
+      @include hocus-focus($type: outline, $color: $s-color-primary);
     }
   }
 }
