--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,3 +17,6 @@
 // Utility Layer
 @import 'utility.animations';
 @import 'utility.generic';
+
+// TODO: Delete example styling
+@import 'examples'
