--- a/components/Examples/Examples/Examples.scss
+++ b/components/Examples/Examples/Examples.scss
@@ -3,8 +3,9 @@
 $c: 'Examples';
 
 .#{$c} {
+  @include set-gutter('medium');
+
   &__info {
-    @include font-style-small;
     @include font-style-italic;
     margin-bottom: 0;
   }
