--- a/assets/css/_tools.z-index.scss
+++ b/assets/css/_tools.z-index.scss
@@ -27,16 +27,11 @@
 }
 
 $s-zindex-map: (
-  'goku': 9001,
-  'shoryuken': 8000,
   'header': 100,
   'modal': (
     'base': 500,
-    'close': 100,
-    'header': 50,
     'footer': 10
   ),
-  'default': 1,
-  'below': -1,
-  'bottomless-pit': -9000
+  'logo': 80,
+  'behind': -100
 ) !default;
