[Update] Show all news and fix i18n active states in navigation, still returning translations if they exist

--- a/components/_SingleInstance/TheNavigation/TheNavigation.scss
+++ b/components/_SingleInstance/TheNavigation/TheNavigation.scss
@@ -79,13 +79,21 @@ $c-the-navigation-margin-top: 10rem;
   }
 
   &__link {
+    &.is-active {
+      font-weight: bold;
+    }
+
     &.is-active-exact {
       color: $s-color-primary;
       font-weight: bold;
     }
 
     &--lang {
-      &.is-active {
+      &.custom-active {
+        font-weight: bold;
+      }
+
+      &.is-active-exact {
         font-weight: bold;
       }
     }
