[Update] TheNavigation: readd exact to langlinks (en can't active if de is active) and remove / in styling. (#keep it simple)

--- a/components/_SingleInstance/TheNavigation/TheNavigation.scss
+++ b/components/_SingleInstance/TheNavigation/TheNavigation.scss
@@ -105,12 +105,7 @@ $c-the-navigation-margin-top: 10rem;
 
   &__lang-item {
     text-transform: capitalize;
-
-    &:not(:last-child) {
-      &::after {
-        content: ' / ';
-      }
-    }
+    margin-right: 1em;
   }
 }
 
