[Docs] Readme: Comments and apollo readme

--- a/assets/css/_generic.fonts.scss
+++ b/assets/css/_generic.fonts.scss
@@ -1,4 +1,4 @@
-/*
+/* TODO: Add your fonts here (this is just a @font-face example):
 @font-face {
   font-family: 'Lucid Placeholder Fonto';
   font-style: normal;
