[Chore] Cherry pick from master – susy fix

--- a/assets/css/_tools.grid.scss
+++ b/assets/css/_tools.grid.scss
@@ -1,2 +1,2 @@
-
-// Don't take me. Take the other when merging!
+// Empty file on purpose. This is replaced when adding susy to the project.
+// file is needed because import in global.scss fails otherwise.
