--- a/components/_Base/BLazyMedia/BLazyMedia.scss
+++ b/components/_Base/BLazyMedia/BLazyMedia.scss
@@ -9,39 +9,10 @@ $c: 'BLazyMedia';
     position: relative;
     display: block;
     height: 0;
-    padding-bottom: 66.6667%;
     overflow: hidden;
-    width: 50%;
-    margin: auto;
-    margin-bottom: 2em;
-  }
-
-  img {
-    display: block;
+    padding-bottom: 56.25%;
     width: 100%;
-    font-family: 'blur-up: always', 'object-fit: cover';
-    object-fit: cover;
-    position: absolute;
-    height: 100%;
-    top: 0;
-    left: 0;
-  }
-
-  .ls-blur-up-is-loading,
-  .lazyload:not([src]) {
-    visibility: hidden;
-  }
-
-  .ls-blur-up-img {
-    opacity: 1;
-    transform: scale(1.1);
-    transition: opacity 0.25s,
-    filter 0.25s;
-    filter: blur(20px);
-  }
-
-  .ls-blur-up-img.ls-inview.ls-original-loaded {
-    opacity: 0;
+    margin: auto;
   }
 
   &__video-wrap {
@@ -50,11 +21,47 @@ $c: 'BLazyMedia';
   }
 
   &__video,
-  &__iframe {
+  &__iframe,
+  &__image,
+  .ls-blur-up-img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+  }
+
+  &__image,
+  .ls-blur-up-img {
+    display: block;
+    font-family: 'blur-up: always', 'object-fit: cover';
+    object-fit: cover;
+  }
+
+  /*
+  ** lazysizes – loading and blur animations.
+  */
+  .ls-blur-up-is-loading {
+    visibility: hidden;
+  }
+
+  .lazyload {
+    &:not([src]) {
+      visibility: hidden;
+    }
+  }
+
+  .ls-blur-up-img {
+    opacity: 1;
+    transform: scale(1.1);
+    transition: opacity 0.25s,
+    filter 0.25s;
+    filter: blur(20px);
+
+    &.ls-inview {
+      &.ls-original-loaded {
+        opacity: 0;
+      }
+    }
   }
 }
