--- a/assets/css/_tools.mixins.scss
+++ b/assets/css/_tools.mixins.scss
@@ -15,9 +15,15 @@
  * $min-value: smallest value for property
  * $max-value: biggest value
  *
- * ! Beware: Don't mix units. You can either use all parameters in px or in rem, but don't mix them.
+ * ⚠️  ! Beware:
+ * Don't mix units. You can either use all parameters in px or in rem, but don't mix them.
  * Because Breakpoints should be set in pixel you should prefer px over other units.
  * (https://adamwathan.me/dont-use-em-for-media-queries/)
+ *
+ * ⚠️ ! Beware 2:
+ *  Media queries declarations do not base themselves on the declared font-size that you apply to html!!!
+ * instead they always use the default size - which as I said is 16px in pretty much all browsers.
+ * Read more: https: //stackoverflow.com/questions/47409585/using-rem-units-in-media-queries-and-as-width
  *
  */
 
