[Update] Add some missing comments, fix modernizr link, fix some language stuff in the config and add some logs for preview debugging

--- a/assets/css/_export.breakpoints.scss
+++ b/assets/css/_export.breakpoints.scss
@@ -1,5 +1,6 @@
 /*
  * Export breakpoints so we can import them in javascript with some webpack magic
+ * https: //css-tricks.com/getting-javascript-to-talk-to-css-and-sass/#article-header-id-1
  */
 
 @import 'settings.variables';
